objects/geopointe__Check_In__c.object
<CustomObject>
    <description>This object contains the history of Check-Ins made through the Geopointe Mobile application as well as records loaded in via Apex or manually by the customer.  The object is intended to document a Who, What, Where, When and Why.

- Who = A lookup relationship to a User record.

- What = Another record that the check-in is linked to.  This holds the record Id.

- Where = A latitude and longitude describing the location of the check-in

- When = A date/time stamp for the check in.

- Why = A type field (values editable by the customer) and an optional comments field help describe why a check-in took place.  Customers can also extend the object to add additional fields.</description>
    <fields>
        <fullName>geopointe__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Check-Ins</relationshipLabel>
        <relationshipName>Check_Ins</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>geopointe__Accuracy_Check_In_ft__c</fullName>
        <inlineHelpText>Approximate accuracy of the Check In position in feet. This is the highest margin of error reported by the device, results are typically much more accurate than value reported.</inlineHelpText>
        <label>Accuracy - Check In (ft)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>geopointe__Accuracy_Check_In_m__c</fullName>
        <inlineHelpText>Approximate accuracy of the Check In position in meters. This is the highest margin of error reported by the device, results are typically much more accurate than value reported.</inlineHelpText>
        <label>Accuracy - Check In (m)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>geopointe__Accuracy_Check_Out_ft__c</fullName>
        <inlineHelpText>Approximate accuracy of the Check Out position in feet. This is the highest margin of error reported by the device, results are typically much more accurate than value reported.</inlineHelpText>
        <label>Accuracy - Check Out (ft)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>geopointe__Accuracy_Check_Out_m__c</fullName>
        <inlineHelpText>Approximate accuracy of the Check Out position in meters. This is the highest margin of error reported by the device, results are typically much more accurate than value reported.</inlineHelpText>
        <label>Accuracy - Check Out (m)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>geopointe__Blank__c</fullName>
        <formula>&quot;&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Used to map the address fields on the Check In map object.  Since a Check-In has no address, we have to specify blank fields.</inlineHelpText>
        <label>Blank</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Check-Ins</relationshipLabel>
        <relationshipName>Check_Ins</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>geopointe__Chatter_ID_Check_Out__c</fullName>
        <inlineHelpText>The ID of the Chatter Feed Item that was submitted for this Check Out.</inlineHelpText>
        <label>Chatter ID - Check Out</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Chatter_ID__c</fullName>
        <inlineHelpText>The ID of the Chatter Feed Item that was submitted for this CheckIn</inlineHelpText>
        <label>Chatter ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Chatter_This__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates whether or not the request wanted the Check In to post to the Chatter feed.</inlineHelpText>
        <label>Chatter This</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>geopointe__Check_Out_Distance_from_Check_In_km__c</fullName>
        <description>Check Out Distance from Check In (kilometers)</description>
        <label>Check Out Distance from Check In (km)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>geopointe__Check_Out_Distance_from_Check_In_miles__c</fullName>
        <description>The distance between the Check In and Check Out in miles.</description>
        <label>Check Out Distance from Check In (miles)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>geopointe__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Check-Ins</relationshipLabel>
        <relationshipName>Check_Ins</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>geopointe__Device_Event_Check_Out__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Device Event - Check Out</label>
        <referenceTo>geopointe__GP_Device_Event__c</referenceTo>
        <relationshipLabel>Device Events - Check Out</relationshipLabel>
        <relationshipName>Device_Events_Check_Out</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>geopointe__Device_Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Device Event</label>
        <referenceTo>geopointe__GP_Device_Event__c</referenceTo>
        <relationshipLabel>Device Events</relationshipLabel>
        <relationshipName>Device_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>geopointe__Device__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Geopointe Device</label>
        <referenceTo>geopointe__GP_Device__c</referenceTo>
        <relationshipLabel>Geopointe Devices</relationshipLabel>
        <relationshipName>Geopointe_Devices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>geopointe__Distance_from_What_ID_kilometers__c</fullName>
        <inlineHelpText>Upon a successful checkin, the distance is calculated from the user&apos;s actual location to the location of the record they checked into (in kilometers).</inlineHelpText>
        <label>Distance from What ID (kilometers)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>geopointe__Distance_from_What_ID_miles__c</fullName>
        <inlineHelpText>Upon a successful checkin, the distance is calculated from the user&apos;s actual location to the location of the record they checked into (in miles).</inlineHelpText>
        <label>Distance from What ID (miles)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>geopointe__Geo_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Geo Location</label>
        <referenceTo>geopointe__Geo_Location__c</referenceTo>
        <relationshipLabel>Check-Ins</relationshipLabel>
        <relationshipName>Check_Ins</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>geopointe__Geocode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Geocode</label>
        <referenceTo>geopointe__Geocode__c</referenceTo>
        <relationshipLabel>Check-Ins</relationshipLabel>
        <relationshipName>Check_Ins</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>geopointe__Geopointe_Daily_Summary__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Geopointe Daily Summary</label>
        <referenceTo>geopointe__GP_Daily_Report_Summary__c</referenceTo>
        <relationshipLabel>Geopointe Check-Ins</relationshipLabel>
        <relationshipName>Check_Ins</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>geopointe__Headline__c</fullName>
        <inlineHelpText>The headline for the record that is displayed on the maps.</inlineHelpText>
        <label>Headline</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Check-Ins</relationshipLabel>
        <relationshipName>Check_Ins</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>geopointe__Map_Link_Check_Out__c</fullName>
        <label>Map Link - Check Out</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>geopointe__Map_Link__c</fullName>
        <label>Map Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>geopointe__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Check-Ins</relationshipLabel>
        <relationshipName>Check_Ins</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>geopointe__Place_ID__c</fullName>
        <label>Place ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Pulse_Event_ID_Check_Out__c</fullName>
        <inlineHelpText>The ID of the Pulse Event that caused this Check Out to occur</inlineHelpText>
        <label>Pulse Event ID - Check Out</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Pulse_Event_ID__c</fullName>
        <inlineHelpText>The ID of the Pulse Event that caused this Check In to be created</inlineHelpText>
        <label>Pulse Event ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Pulse_Map_Object_Device_Id__c</fullName>
        <inlineHelpText>The Device Id of the Pulse Map Object Record that caused this Check In/Out to occur</inlineHelpText>
        <label>Pulse Map Object Device Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Task_ID_Check_Out__c</fullName>
        <inlineHelpText>The ID of the Task Item that was created for this Check Out</inlineHelpText>
        <label>Task ID - Check Out</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Task_ID__c</fullName>
        <inlineHelpText>The ID of the Task Item that was created for this CheckIn</inlineHelpText>
        <label>Task ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__What_ID__c</fullName>
        <inlineHelpText>A Salesforce ID referring to the record that the check-in is against</inlineHelpText>
        <label>What ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__What_Text__c</fullName>
        <inlineHelpText>If a What ID is entered into the record, this field should be populated with the Name of that record.  If not, this field can be populated with text describing what was being checked into.</inlineHelpText>
        <label>What (Text)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>geopointe__When_Check_Out__c</fullName>
        <inlineHelpText>Date Time of the Check-Out</inlineHelpText>
        <label>When - Check Out</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>geopointe__When__c</fullName>
        <defaultValue>now()</defaultValue>
        <inlineHelpText>Date Time of the Check-In</inlineHelpText>
        <label>When</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>geopointe__Where_Check_Out_Latitude__c</fullName>
        <inlineHelpText>The latitude of the Check Out location.</inlineHelpText>
        <label>Where - Check Out (Latitude)</label>
        <precision>14</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>geopointe__Where_Check_Out_Longitude__c</fullName>
        <inlineHelpText>The longitude of the Check In location.</inlineHelpText>
        <label>Where - Check Out (Longitude)</label>
        <precision>14</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>geopointe__Where_Latitude__c</fullName>
        <inlineHelpText>The latitude of the Check In location.</inlineHelpText>
        <label>Where (Latitude)</label>
        <precision>14</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>geopointe__Where_Longitude__c</fullName>
        <inlineHelpText>The longitude of the Check In location.</inlineHelpText>
        <label>Where (Longitude)</label>
        <precision>14</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>geopointe__Who__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>A reference to the user performing the check-in.</inlineHelpText>
        <label>Who</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Check_Ins</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>geopointe__Why_Text_Check_Out__c</fullName>
        <label>Why - Check Out</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>geopointe__Why_Text__c</fullName>
        <inlineHelpText>An optional place to put comments related to the check-in</inlineHelpText>
        <label>Why (Text)</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>geopointe__Why_Type_Check_Out__c</fullName>
        <label>Check Out Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mobile Check-Out</fullName>
                </value>
                <value>
                    <fullName>geopointe.API Check-Out</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>geopointe__Why_Type__c</fullName>
        <inlineHelpText>A reason for or type of check-in</inlineHelpText>
        <label>Check In Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mobile Check-In</fullName>
                </value>
                <value>
                    <fullName>geopointe.API Check-In</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Geopointe Check-In</label>
    <listViews>
        <fullName>geopointe__All</fullName>
        <columns>NAME</columns>
        <columns>geopointe__Who__c</columns>
        <columns>geopointe__When__c</columns>
        <columns>geopointe__Where_Latitude__c</columns>
        <columns>geopointe__Where_Longitude__c</columns>
        <columns>geopointe__What_ID__c</columns>
        <columns>geopointe__What_Text__c</columns>
        <columns>geopointe__Why_Type__c</columns>
        <columns>geopointe__Why_Text__c</columns>
        <columns>geopointe__Distance_from_What_ID_kilometers__c</columns>
        <columns>geopointe__Distance_from_What_ID_miles__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>geopointe__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>geopointe__Today</fullName>
        <columns>NAME</columns>
        <columns>geopointe__Who__c</columns>
        <columns>geopointe__When__c</columns>
        <columns>geopointe__Where_Latitude__c</columns>
        <columns>geopointe__Where_Longitude__c</columns>
        <columns>geopointe__What_ID__c</columns>
        <columns>geopointe__What_Text__c</columns>
        <columns>geopointe__Why_Type__c</columns>
        <columns>geopointe__Why_Text__c</columns>
        <columns>geopointe__Distance_from_What_ID_kilometers__c</columns>
        <columns>geopointe__Distance_from_What_ID_miles__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Created Today</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CHK_IN-{00000}</displayFormat>
        <label>Record #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Geopointe Check-Ins</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>